# polar-send-training

./: .travis.yml  Cargo.toml  README.md  travis.yml
src/: bin.rs  lib.rs  polar_watch.rs  unused.rs
src/polar_watch/: polar_usb.rs
src/polar_watch/polar_usb/: polar_error.rs
tests/: test.rs
tests/examples/: complex-repeat.BPB  double-repeat.BPB  fast.BPB  many-rec-phases.BPB  real1.BPB  real2.BPB  simple-block.BPB  simple-recovery-phase.BPB  simple-repeat.BPB  stress-block1.BPB  stress-block2.BPB  tiny.BPB
