[package]
name = "polar-send-training"
version = "0.1.0"
authors = ["Diogo Ribeiro <slysherz@gmail.com>"]
edition = "2018"

[lib]
name = "polar_send_training"
path = "src/lib.rs"

[[bin]]
name = "polar_send_training"
path = "src/bin.rs"

[dependencies]
rusb = "0.5.2"
log = "0.4.8"
simplelog = "0.7.4"
polar-prost = "0.1.0"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }